# AmazonJapanScraper

./: .gitignore  BUILD_FIX_SUMMARY.md  CHINESE_COLUMNS_UPDATE.md  DEPLOYMENT.md  ENCODING_BUG_FIX.md  ENCODING_FIX_SUMMARY.md  FINAL_CLEANUP_AND_FIX.md  GITHUB_ACTIONS_UPDATE.md  GITHUB_ACTIONS_VERSION_FIX.md  GUI_FIX_SUMMARY.md  INFINITE_LOOP_FIX_FINAL.md  LICENSE  PACKAGE_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_UPGRADE_GUIDE.md  README.md  REFACTORING_SOLUTION.md  SEARCH_ENGINE_FIX_REPORT.md  SELLER_EXTRACTION_ENHANCEMENT.md  SIMPLIFIED_USER_GUIDE.md  SMART_NETWORK_STRATEGY_REPORT.md  ULTIMATE_VERSION_REPORT.md  WINDOWS_EXE_FIX_FINAL.md  build_exe.py  build_safe.py  build_simple.py  build_simplified.py  build_ultimate.py  build_ultimate_safe.py  build_v5.py  build_windows.py  business_logic_analysis.md  check_status.py  diagnose_exe_problem.py  enhanced_seller_extractor.py  final_comprehensive_test_report.md  install_and_build.bat  install_dependencies.bat  main.py  main_selenium_only.py  (+10 more)
.github/workflows/: build-windows.yml
release_simplified/: README.txt
release_ultimate/: README.txt
