[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-japan-scraper"
version = "2.0.0"
description = "Amazon Japan 卖家信息提取工具 - 多语言增强版"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Amazon Scraper Team", email = "team@example.com"}
]
keywords = ["amazon", "scraper", "japan", "seller", "multilingual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/amazon-japan-scraper"
Repository = "https://github.com/your-username/amazon-japan-scraper.git"
Issues = "https://github.com/your-username/amazon-japan-scraper/issues"

[project.scripts]
amazon-scraper = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
